--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 Flask==2.1.3
 Flask-SQLAlchemy==2.5.1
+SQLAlchemy==1.4.46  # Compatible with Flask-SQLAlchemy 2.5.1
 Flask-WTF==1.0.1
 Flask-Login==0.6.0
 Flask-Migrate==3.1.0
 Flask-Bootstrap==3.3.7.1
 gunicorn==20.1.0
-Werkzeug==2.0.3
