--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,19 @@
-Flask==2.1.3
-Flask-SQLAlchemy==2.5.1
-SQLAlchemy==1.4.46  # Compatible with Flask-SQLAlchemy 2.5.1
-Flask-WTF==1.0.1
-Flask-Login==0.6.0
-Flask-Migrate==3.1.0
-Flask-Bootstrap==3.3.7.1
-gunicorn==20.1.0
+﻿blinker==1.8.2
+click==8.1.7
+colorama==0.4.6
+distlib==0.3.8
+filelock==3.15.4
+Flask==3.0.3
+Flask-SQLAlchemy==3.1.1
+greenlet==3.0.3
+gunicorn==22.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+numpy==2.0.0
+packaging==24.1
+platformdirs==4.2.2
+SQLAlchemy==2.0.31
+typing_extensions==4.12.2
+virtualenv==20.26.3
+Werkzeug==3.0.3
